fixed spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,11 @@
     height: 250px;
     margin-right: 10px;
     padding: 2px;
-    width: 350px;
+    width: 400px;
+}
+
+.nav {
+    margin-bottom: 5%;
 }
 
 .bio { 
@@ -27,7 +31,7 @@
 .cv-pdf {
     margin: auto;
     height: 800px;
-    width: 700px;
+    width: 80%;
 }
 
 .email {
@@ -42,6 +46,11 @@
     background: black;
     height: 5px;
 } */
+
+.section-header {
+    padding: 10px;
+    padding-bottom: 50px;
+}
 
 .send-button {
     background-color: #55ACEE;
@@ -64,10 +73,11 @@
     background: #cfd4d4;
     height:1px;
     margin-bottom: 2%;
+    margin-top: 2%;
     margin-left: -100%;
-    position:relative;
+    /* position:relative; */
     overflow:hidden;
-    width:201.5%;
+    width:200.5%;
     
 }
 
@@ -75,14 +85,21 @@
     text-align: center;
 }
 
-.contact-area {
-    border: 5px solid black;
-    padding: 5px;
+
+
+.twitter-buttons {
+    padding: 2px;
+    text-align: center;
 }
 
-.twitter-container {
-    border: 5px solid black;
+/* .twitter-container {
+     border: 5px solid black; 
+} */
+
+.twitter-follow-button {
+    height: 10px;
 }
+
 .twitter-timeline {
     width: 100%;
 }
